# T-Display-P4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  partitions_model.csv  sdkconfig.defaults
debug/examples/i2s_es8311_2/components/cpp_bus_driver-1.0.0/: CMakeLists.txt
debug/examples/i2s_es8311_2/components/cpp_bus_driver-1.0.0/src/: config.h  (+3 more)
debug/examples/rm69a10_lvgl_camera_dsi(green_hue_error)/components/cpp_bus_driver-1.0.0/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/examples/afe/: main.cpp
main/examples/aw86224/: main.cpp
main/examples/bq27220/: main.cpp
main/examples/deep_sleep/: ICM20948_WE.cpp  gpio_wakeup.cpp  light_sleep_example.h  main.cpp
main/examples/es8311/: c2_b16_s44100.h  main.cpp
main/examples/es8311_sd_wav/: main.cpp
main/examples/esp32c6_at_host_sdio_uart/: main.cpp
main/examples/esp32c6_at_host_sdio_wifi/: main.cpp
main/examples/hi8561_camera/: main.cpp
main/examples/hi8561_lvgl/: main.cpp
main/examples/hi8561_lvgl_touch_draw/: main.cpp
main/examples/icm20948/: main.cpp
main/examples/iic_scan/: main.cpp
main/examples/l76k/: main.cpp
main/examples/lvgl_9_ui/: README.md  lvgl_font_lineseedkr_rg_120.c  lvgl_font_lineseedkr_th_60.c  lvgl_font_misans_bold_27.c  lvgl_ui.cpp  lvgl_ui.h  main.cpp  win_home_app_icon_camera_110x110px_rgb565a8.c  win_home_app_icon_cit_110x110px_rgb565a8.c  win_home_app_icon_lora_110x110px_rgb565a8.c  win_home_app_icon_music_110x110px_rgb565a8.c  win_home_app_icon_setings_110x110px_rgb565a8.c  win_music_play_pause_1_117x117px_rgb565a8.c  win_music_play_pause_2_117x117px_rgb565a8.c  win_music_play_start_1_140x140px_rgb565a8.c  win_music_play_start_2_140x140px_rgb565a8.c  win_music_play_switch_left_1_95x95px_rgb565a8.c  win_music_play_switch_left_2_95x95px_rgb565a8.c  win_music_play_switch_right_1_95x95px_rgb565a8.c  win_music_play_switch_right_2_95x95px_rgb565a8.c
main/examples/pcf8563/: main.cpp
main/examples/radiolib_sx1262_send_receive/: main.cpp
main/examples/screen_camera/: main.cpp
main/examples/screen_lvgl/: main.cpp
main/examples/screen_lvgl_touch_draw/: main.cpp
main/examples/sgm38121/: main.cpp
main/examples/sx1262_gfsk_send_receive/: main.cpp
main/examples/sx1262_lora_send_receive/: main.cpp
main/examples/sx1262_tx_continuous_wave/: main.cpp
main/examples/tusb_serial_device/: main.c
main/examples/xl9535/: main.cpp
main/keyboard_examples/radiolib_cc1101_send_receive/: main.cpp
main/keyboard_examples/radiolib_nrf24l01_send_receive/: main.cpp
main/keyboard_examples/st25r3916/: main.cpp
main/keyboard_examples/st25r3916b/: main.cpp
main/keyboard_examples/tca8418/: main.cpp
main/keyboard_examples/xl9555/: main.cpp
(+381 files in other folders)
